<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddTripActivity">

    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
       >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tripNameEditText"
                android:layout_width="366dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="8dp"
                android:drawablePadding="8dp"
                android:hint="  Trip Name"
                android:minHeight="48dp"
                android:drawableLeft="@drawable/ic_outline_map_24"
                android:fontFamily="@font/henny_penny"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/destinationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="  Destination"
                android:minHeight="48dp"
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_outline_location_on_24"
                android:fontFamily="@font/henny_penny"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/tripTypeRadioGroup"
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/radioButtonCityBreak"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/light_blue"
                    android:text="@string/city_break"
                    android:fontFamily="@font/henny_penny"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/ic_baseline_location_city_24"/>

                <RadioButton
                    android:id="@+id/radioButtonSeaSide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/light_blue"
                    android:text="@string/sea_side"
                    android:fontFamily="@font/henny_penny"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/ic_outline_waves_24"/>

                <RadioButton
                    android:id="@+id/radioButtonMountain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/light_blue"
                    android:text="@string/mountains"
                    android:fontFamily="@font/henny_penny"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/ic_baseline_landscape_24"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addTripButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginBottom="16dp"
                    android:onClick="addTripOnClick"
                    app:tint="@color/white"
                    app:srcCompat="@android:drawable/ic_input_add"
                    tools:ignore="SpeakableTextPresentCheck"
                    />
            2</RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priceEUR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Price(EUR) "
                    android:fontFamily="@font/henny_penny"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/showPriceEUR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/henny_penny"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/priceSeekBar"
                    style="@style/MySeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:max="5000"
                    android:progress="100"
                    android:thumb="@drawable/ic_baseline_adjust_24" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/startDateButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/henny_penny"
                    android:textStyle="bold"
                    android:background="@color/light_blue"
                    android:onClick="onClickPickStartDate"
                    android:text="@string/start_date"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/ic_baseline_today_24v2" />

                <Button
                    android:id="@+id/endDateButton"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/light_blue"
                    android:drawableLeft="@drawable/ic_baseline_date_range_24v2"
                    android:fontFamily="@font/henny_penny"
                    android:textStyle="bold"
                    android:onClick="onClickPickEndDate"
                    android:text="@string/end_date"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startDateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:fontFamily="@font/henny_penny"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/endDateTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:fontFamily="@font/henny_penny"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/ratingBarTrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:theme="@style/RatingBar"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/view_finder"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_baseline_photo_24" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/openGalleryImageView"
                android:layout_width="185dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_photo_library_24" />

            <Button
                android:id="@+id/AddUrltrip"
                android:layout_width="179dp"
                android:layout_height="40dp"
                android:text="add url"
                android:fontFamily="@font/henny_penny"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>


    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


